@@ -384,6 +384,46 @@ is_deeply(
   }
 }
 
+# call_sub can receive array reference
+{
+  # call_sub can receive array reference - new_barray
+  {
+    my $sp_values = [1, $BYTE_MAX, $BYTE_MIN];
+    my $values = TestCase::ExchangeAPI->return_byte_array_only($sp_values)->to_elems;
+    is_deeply($values, [1, $BYTE_MAX, $BYTE_MIN]);
+  }
+  # call_sub can receive array reference - new_sarray
+  {
+    my $sp_values = [1, $SHORT_MAX, $SHORT_MIN];
+    my $values = TestCase::ExchangeAPI->return_short_array_only($sp_values)->to_elems;
+    is_deeply($values, [1, $SHORT_MAX, $SHORT_MIN]);
+  }
+  # call_sub can receive array reference - new_iarray
+  {
+    my $sp_values = [1, $INT_MAX, $INT_MIN];
+    my $values = TestCase::ExchangeAPI->return_int_array_only($sp_values)->to_elems;
+    is_deeply($values, [1, $INT_MAX, $INT_MIN]);
+  }
+  # call_sub can receive array reference - new_larray
+  {
+    my $sp_values = [1, $LONG_MAX, $LONG_MIN];
+    my $values = TestCase::ExchangeAPI->return_long_array_only($sp_values)->to_elems;
+    is_deeply($values, [1, $LONG_MAX, $LONG_MIN]);
+  }
+  # call_sub can receive array reference - new_farray
+  {
+    my $sp_values = [0.5, $FLT_MAX, $FLT_MIN];
+    my $values = TestCase::ExchangeAPI->return_float_array_only($sp_values)->to_elems;
+    is_deeply($values, [0.5, $FLT_MAX, $FLT_MIN]);
+  }
+  # call_sub can receive array reference - new_darray
+  {
+    my $sp_values = [0.5, $DBL_MAX, $DBL_MIN];
+    my $values = TestCase::ExchangeAPI->return_double_array_only($sp_values)->to_elems;
+    is_deeply($values, [0.5, $DBL_MAX, $DBL_MIN]);
+  }
+}
+
 # new array
 {
   # new_barray
