@@ -4,6 +4,7 @@
   - add rand function
   - SPVM::call_sub can receive decoded string
   - add stringify overload to SPVM::Data::Array
+  - SPVM::call_sub can receive numeric array
 0.0428 2018-04-22
   - rename new_list to list
   - rename new_hash to hash
